# Eigen

./: .gitignore  2.6.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LANGUAGE.md  MIGRATION.md  NOISE_MODELS.md  README.md  STDLIB_API.md  audit.md  benchmark_comparison.md  benchmark_dashboard.html  complex_dashboard.html  complex_extreme_results.md  eigen.toml  extensive_results.md  mkdocs.yml  paper.aux  paper.out  paper.tex  paper.toc  pyproject.toml  python_vs_eigen.md  release-report.md  roadmap_2_5.md  setup.py  tests_run_results.md  versions.json
.agents/: AGENTS.md
.github/workflows/: ci.yml  codeql.yml  release.yml
appendix_logs/: benchmark_run.txt  env_fingerprint.txt  expanded_benchmark_run.txt
benchmarks/: aot_vs_vm.py  arrays.eig  bell.eig  env_fingerprint.py  factorial.eig  fibonacci.eig  ghz.eig  grover.eig  maps.eig  results.json  run_benchmarks.py  run_expanded_benchmarks.py  teleportation.eig
benchmarks/quantum_hard/: comparison.aux  comparison.tex  quantum_hard_bench.py  results.json  scaling_bench.py  scaling_comparison.aux  scaling_comparison.tex  scaling_results.json
docs/: architecture.md  benchmark-results.md  compiler-design.md  eqir-specification.md  equivalence-checker.md  examples-guide.md  index.md  language-specification.md  optimizer-specification.md  runtime-specification.md  standard-library.md
examples/: bell.eig  coin_flip.eig  cond_execution.eig  deutsch.eig  deutsch.ll  equiv_demo.eig  equiv_demo_target.eig  error_handling.eig  ghz.eig  grover.eig  grover.qir.ll  match_case.eig  noise_simulation.eig  operator_overloading.eig  opt_demo.eig  opt_demo_target.eig  phase2_demo.eig  phase2_demo_qiskit.py  phase2_demo_reference.md  qft.eig  qrng.eig  string_interpolation.eig  superdense.eig  teleportation.eig
figures/: generate_all_figures.py  generate_figures.py
installer/: LICENSE.txt  eigen_setup.iss  post_install.ps1  uninstall_cleanup.ps1
native/rust/: Cargo.toml
native/rust/src/: lib.rs  optimizer.rs  qrt.rs  routing.rs  runtime.rs  simulator.rs  zx.rs
native/rust/src/frontend/: ast.rs  interning.rs  lexer.rs  mod.rs  parser.rs  py_ast.rs  type_checker.rs
paper/: build.py  paper.md  prepare_paper_tex.py  tex_header.tex  title_block.tex
papers/: eigen-research-paper.md
quantum_qkd/: bb84_simulation.eig
results/: benchmark_raw.csv  benchmark_summary.csv
scripts/: abstract_block.tex  build_installers.py  check_version.py  check_version_sync.py  default.latex  generate_paper_pdf.js  title_block.tex
src/: __init__.py  adaptive_optimization.py  ast.py  backend_capabilities.py  benchmark_infrastructure.py  bytecode.py  canonicalizer.py  cli.py  cli_enhancements.py  cli_extras.py  community.py  compilation_research.py  compiler.py  compiler_db.py  compiler_optimizations.py  crash_report.py  density_matrix_simulator.py  diagnostics.py  doc_generator.py  documentation_pipeline.py  ebc_compiler.py  equivalence.py  ffi.py  formatter.py  hybrid_orchestration.py  import_resolver.py  incremental_compiler.py  ir_converter.py  ir_graph.py  lexer.py  lsp_extensions.py  main.py  mutation_testing.py  native_integration_envelope.py  numerical_stability.py  optimizer.py  packager.py  parallel_compiler.py  parametrized_circuit.py  parser.py  (+19 more)
src/aot/: compiler.py  llvm_codegen.py  type_extractor.py
src/backend/: async_scheduler.py  bytecode.py  crash_recovery.py  distributed.py  ebc_compiler.py  gate_registry.py  llvm_compiler.py  qasm3_exporter.py  qiskit_backend.py  quil_exporter.py  scheduler.py  sim_selector.py  unified_backend.py  vm.py  vm_optimizations.py
src/commands/: __init__.py  audit.py  bench.py  build.py  debug.py  doc.py  doctor.py  estimate.py  exec.py  extras.py  fmt.py  lsp.py  packager.py  profile.py  reproduce.py  run.py  test.py  verify.py  viz.py
src/debugger/: dap_server.py  debugger.py
src/distributed/: __init__.py  circuit_slicer.py  distributed_job.py  mpi_simulator.py
src/docs/: documentation_extras.py
src/frontend/: ast.py  did_you_mean.py  lexer.py  parser.py  parser_recovery.py
src/ir/: ir_converter.py  ir_graph.py  mlir_dialect.py  optimizer.py  pass_manager.py  tensor_compiler.py
src/jit/: jit_compiler.py  native_codegen.py  recursive_codegen.py  trace_compiler.py
src/language_extensions/: __init__.py  algebraic_data_types.py  async_await.py  default_named_variadic.py  macro_system.py  module_system.py  operator_overloading.py  pattern_matching_guards.py  quantum_constructs.py  type_system_extensions.py
src/lsp/: lsp_server.py
src/noise/: __init__.py  crosstalk_model.py  device_profile.py  noise_channel.py  noise_model.py  t1t2_model.py
src/reproducibility/: __init__.py  experiment_tracker.py  seed_management.py
src/research/: __init__.py  entanglement_witness.py  quantum_volume.py  randomized_benchmarking.py
src/resource_estimator/: estimator.py
src/routing/: router.py
test_pkg/: eigen.toml
test_pkg_manual/: eigen.toml
tests/: nova_benchmarks.py  performance_accuracy_benchmark.py  python_vs_eigen_benchmarks.py  reproduce_security_issues.py  run_complex_extreme_suite.py  run_extensive_suite.py  run_master_benchmark_suite.py  test_adaptive_optimization.py  test_algebraic_data_types.py  test_aot.py  test_ast_ir_fuzz.py  test_async_await.py  test_async_syntax.py  test_audit_items.py  test_audit_trail.py  test_benchmark_infrastructure.py  test_bytecode_versioning.py  test_cache.py  test_cli_commands.py  test_cli_enhancements.py  test_community.py  test_compilation_research.py  test_converters.py  test_crash_recovery.py  test_crash_report_robustness.py  test_debugger.py  test_default_named_variadic.py  test_density_matrix.py  test_deterministic_mode.py  test_did_you_mean.py  test_distributed_sim.py  test_documentation_pipeline.py  test_equivalence.py  test_experiment_tracker.py  test_exporters.py  test_ffi.py  test_formatter_correctness.py  test_gate_registry.py  test_gates_2_5.py  test_generics.py  (+76 more)
v2.5.0/: 404.html  index.html
v2.6.0/: index.html
v2.8.0/: 404.html  index.html
vscode-extension/: package.json
(+188 files in other folders)
