[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eigen-lang"
version = "2.6.0"
description = "Eigen 2.6 — Misery: Runtime-first hybrid classical-quantum programming language with fast-loop JIT, stabilizer simulator, SABRE routing, advanced noise models, and Inno Setup installer"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "llvmlite>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
eigen = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "stdlib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/backend/backends/*",
    "src/commands/*",
    "src/cli.py",
    "src/main.py",
    "src/packager.py",
    "src/formatter.py",
    "src/doc_generator.py",
    "src/lsp/*",
    "src/debugger/*",
    "src/backend/distributed.py",
    "src/backend/llvm_compiler.py",
    "src/backend/qiskit_backend.py",
    "src/crash_report.py",
    "src/profiler.py",
]

[tool.coverage.report]
fail_under = 60
show_missing = true
