[package]
name = "eigen_native"
version = "2.6.0"
edition = "2021"

[lib]
name = "eigen_native"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"

[features]
default = ["pyo3"]
